@@ -3019,6 +3019,11 @@ environment by the mandatory init file dfhack.lua:
   set to the value of ``default_value``, which defaults to ``{}`` if not set.
   The new or existing value of ``t[key]`` is then returned.
 
+* ``ensure_keys(t, key...)``
+
+  Walks a series of keys, creating any missing keys as empty tables. The new or
+  existing table from the last specified key is returned from the function.
+
 .. _lua-string:
 
 String class extensions
